# calblend

./: .gitignore  PRIVACY.md  README.md  STORE_LISTING.md  events.user.js  manifest.json  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wxt.config.ts
.github/workflows/: desktop.yml  publish-packages.yml  release.yml  test.yml
desktop/: build.mjs  package.json  tsconfig.json
desktop/src/: about.html  settings.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/inject/: branding.ts  calendar-data.ts  calendar-fetch.ts  main.ts  notifications.ts  shim.ts  tray-events.ts
entrypoints/: background.ts  content.ts
entrypoints/popup/: index.html  main.ts
packaging/aur/calblend-beta-bin/: PKGBUILD
packaging/chocolatey/: calblend.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/flatpak/: run.avelino.calblend.desktop  run.avelino.calblend.metainfo.xml  run.avelino.calblend.yml
packaging/homebrew/Casks/: calblend.rb  calblend@beta.rb
packaging/scoop/: calblend-beta.json  calblend.json
packaging/snap/: snapcraft.yaml
packaging/winget/: avelino.CalBlend.Beta.yaml
site/: hugo.toml
site/content/: _index.md
site/layouts/: index.html
src/: colors.ts  event-detection.ts  event-grouping.ts  event-merging.ts  features.ts  observer.ts  selectors.ts  storage.ts  styles.ts  types.ts  weekend.ts
test/: calendar-data.test.ts  calendar-fetch.test.ts  colors.test.ts  event-detection.test.ts  event-grouping.test.ts  event-merging.test.ts  features.test.ts  observer.test.ts  storage.test.ts  styles.test.ts  tray-events.test.ts  weekend.test.ts
(+23 files in other folders)
