[package]
name = "calblend-desktop"
version = "0.1.0"
edition = "2021"
description = "CalBlend Desktop - Google Calendar enhancement app"

[[bin]]
name = "CalBlend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
block2 = "0.6"
